Replace raw arrays with List